parser10/tree-sitter-able/grammar.js
    source_file: $ => seq(
      field("package", optional($.package_statement)),
      repeat(field("imports", $.import_statement)),
      repeat(field("statements", $.statement)),
    ),

    comment: _ => token(seq("##", /[^\n]*/)),

    package_statement: $ => seq(
      "package",
      $.identifier,
      repeat(seq(".", $.identifier)),
      optional(";"),
    ),

    import_statement: $ => seq(
      field("kind", choice("import", "dynimport")),
      field("path", $.qualified_identifier),
      optional(field("clause", $.import_clause)),
      optional(";"),
    ),

    import_clause: $ => choice(
      alias(token(".*"), $.import_wildcard_clause),
      seq(
        alias(token(seq(".", "{")), "{"),
        commaSep1($.import_selector),
        optional(","),
        "}"
      ),
      seq("as", $.identifier),
    ),

    function_definition: $ => seq(
      optional("private"),
      "fn",
      field("name", $.identifier),
      field("type_parameters", optional($.type_parameter_list)),
      field("parameters", $.parameter_list),
      field("return_type", optional($.return_type)),
      field("where_clause", optional($.where_clause)),
      field("body", $.block),
    ),

    implicit_method_definition: $ => seq(
      optional("private"),
      "fn",
      "#",
      field("name", $.identifier),
      field("type_parameters", optional($.type_parameter_list)),
      field("parameters", $.parameter_list),
      field("return_type", optional($.return_type)),
      field("where_clause", optional($.where_clause)),
      field("body", $.block),
    ),

    generic_parameter_list: $ => repeat1($.generic_parameter),

    generic_parameter: $ => seq(
      $.identifier,
      optional(seq(":", $.type_bound_list)),
    ),

    declaration_type_parameters: $ => choice(
      $.type_parameter_list,
      $.generic_parameter_list,
    ),

    parameter_list: $ => seq(
      "(",
      commaSep($.parameter),
      ")",
    ),

    parameter: $ => seq(
      field("pattern", $.pattern),
      optional(seq(":", field("type", $.type_expression))),
    ),

    return_type: $ => seq("->", $.type_expression),

    block: $ => seq(
      "{",
      repeat($.statement),
      "}",
    ),

    expression_statement: $ => seq(
      field("expression", $.expression),
      optional(";"),
    ),

    struct_definition: $ => seq(
      optional("private"),
      "struct",
      field("name", $.identifier),
      field("type_parameters", optional($.declaration_type_parameters)),
      choice(
        field("record", $.struct_record),
        field("tuple", $.struct_tuple),
      ),
      optional($.where_clause),
    ),

    struct_record: $ => seq(
      "{",
      commaSep($.struct_field),
      optional(","),
      "}",
    ),

    struct_field: $ => seq(
      optional("private"),
      $.identifier,
      ":",
      $.type_expression,
    ),

    union_definition: $ => seq(
      optional("private"),
      "union",
      field("name", $.identifier),
      field("type_parameters", optional($.declaration_type_parameters)),
      "=",
      commaSep1($.type_expression),
    ),

    interface_definition: $ => seq(
      optional("private"),
      "interface",
      field("name", $.identifier),
      field("type_parameters", optional($.declaration_type_parameters)),
      optional(seq("for", field("self_type", $.type_expression))),
      field("where_clause", optional($.where_clause)),
      choice(
        seq(
          "{",
          repeat($.interface_member),
          "}",
        ),
        seq(
          "=",
          field("composite", $.interface_composition),
        ),
      ),
    ),

    interface_member: $ => choice(
      seq(
        field("signature", $.function_signature),
        field("default_body", $.block),
      ),
      seq(
        field("signature", $.function_signature),
        optional(";"),
      ),
    ),

    function_signature: $ => seq(
      "fn",
      field("name", $.identifier),
      field("type_parameters", optional($.type_parameter_list)),
      field("parameters", $.parameter_list),
      field("return_type", optional($.return_type)),
      field("where_clause", optional($.where_clause)),
    ),

    methods_definition: $ => seq(
      "methods",
      field("type_parameters", optional($.type_parameter_list)),
      field("target", $.type_expression),
      field("where_clause", optional($.where_clause)),
      "{",
      repeat($.method_member),
      "}",
    ),

    implementation_definition: $ => seq(
      optional("private"),
      "impl",
      field("type_parameters", optional($.type_parameter_list)),
      field("interface", $.qualified_identifier),
      field("interface_args", optional($.interface_argument_clause)),
      "for",
      field("target", $.type_expression),
      field("where_clause", optional($.where_clause)),
      "{",
      repeat($.method_member),
      "}",
    ),

    method_member: $ => choice(
      $.function_definition,
      $.implicit_method_definition,
    ),

    named_implementation_definition: $ => seq(
      field("name", $.identifier),
      "=",
      field("implementation", $.implementation_definition),
    ),

    return_statement: $ => prec.left(seq(
      "return",
      optional($.expression),
      optional(";"),
    )),

    pipe_expression: $ => prec.left(
      PREC.pipe,
      seq(
        $.matchable_expression,
        repeat(seq("|>", $.matchable_expression)),
      ),
    ),

    matchable_expression: $ => choice(
      $.ensure_expression,
      $.rescue_expression,
      $.handling_expression,
      $.proc_expression,
      $.spawn_expression,
    $.breakpoint_expression,
    $.match_expression,
    $.assignment_expression,
  ),

    proc_expression: $ => seq(
      "proc",
      choice(
        $.block,
        $.do_expression,
        $.call_target,
      ),
    ),

    spawn_expression: $ => seq(
      "spawn",
      choice(
        $.block,
        $.do_expression,
        $.call_target,
      ),
    ),

    assignment_expression: $ => choice(
      prec.right(
        PREC.assignment,
        seq(
          field("left", $.assignment_target),
          field("operator", $.assignment_operator),
          field("right", $.assignment_expression),
        ),
      ),
      $.range_expression,
    ),

    assignment_target: $ => choice(
      $.pattern,
      $.postfix_expression,
    ),

    assignment_operator: _ => choice(...ASSIGN_OPERATORS),

    range_expression: $ => choice(
      prec.left(
        PREC.range,
        seq(
          $.logical_or_expression,
          field("operator", choice("..", "...")),
          $.logical_or_expression,
        ),
      ),
      $.logical_or_expression,
    ),

    logical_or_expression: $ => prec.left(
      PREC.logical_or,
      seq(
        $.logical_and_expression,
        repeat(seq("||", $.logical_and_expression)),
      ),
    ),

    logical_and_expression: $ => prec.left(
      PREC.logical_and,
      seq(
        $.bitwise_or_expression,
        repeat(seq("&&", $.bitwise_or_expression)),
      ),
    ),

    bitwise_or_expression: $ => prec.left(
      PREC.bit_or,
      seq(
        $.bitwise_xor_expression,
        repeat(seq("|", $.bitwise_xor_expression)),
      ),
    ),

    bitwise_xor_expression: $ => prec.left(
      PREC.bit_xor,
      seq(
        $.bitwise_and_expression,
        repeat(seq("\\xor", $.bitwise_and_expression)),
      ),
    ),

    bitwise_and_expression: $ => prec.left(
      PREC.bit_and,
      seq(
        $.equality_expression,
        repeat(seq("&", $.equality_expression)),
      ),
    ),

    equality_expression: $ => prec.left(
      PREC.equality,
      seq(
        $.comparison_expression,
        repeat(seq(choice("==", "!="), $.comparison_expression)),
      ),
    ),

    comparison_expression: $ => prec.left(
      PREC.comparison,
      seq(
        $.shift_expression,
        repeat(seq(choice(">", "<", ">=", "<="), $.shift_expression)),
      ),
    ),

    shift_expression: $ => prec.left(
      PREC.shift,
      seq(
        $.additive_expression,
        repeat(seq(choice("<<", ">>"), $.additive_expression)),
      ),
    ),

    additive_expression: $ => prec.left(
      PREC.additive,
      seq(
        $.multiplicative_expression,
        repeat(seq(choice("+", "-"), $.multiplicative_expression)),
      ),
    ),

    multiplicative_expression: $ => prec.left(
      PREC.multiplicative,
      seq(
        $.unary_expression,
        repeat(seq(choice("*", "/", "%"), $.unary_expression)),
      ),
    ),

    unary_expression: $ => choice(
      prec.right(
        PREC.unary,
        seq(
          choice("-", "!", "~"),
          $.unary_expression,
        ),
      ),
      $.exponent_expression,
    ),

    exponent_expression: $ => choice(
      prec.right(
        PREC.exponent,
        seq(
          $.postfix_expression,
          "^",
          $.exponent_expression,
        ),
      ),
      $.postfix_expression,
    ),

    postfix_expression: $ => prec.left(
      PREC.call,
      seq(
        choice(
          $.primary_expression,
          $.proc_expression,
          $.spawn_expression,
          $.breakpoint_expression,
        ),
        repeat(choice(
          $.type_arguments,
          $.call_suffix,
          $.index_suffix,
          $.propagate_suffix,
          $.member_access,
        )),
        optional($.lambda_expression),
      ),
    ),

    call_target: $ => prec.left(
      PREC.call,
      seq(
        choice(
          $.primary_expression,
          $.proc_expression,
          $.spawn_expression,
          $.breakpoint_expression,
        ),
        repeat(choice(
          $.type_arguments,
          $.member_access,
          $.index_suffix,
          $.propagate_suffix,
        )),
        $.call_suffix,
        repeat(choice(
          $.type_arguments,
          $.call_suffix,
          $.index_suffix,
          $.propagate_suffix,
          $.member_access,
        )),
        optional($.lambda_expression),
      ),
    ),

    call_suffix: $ => prec.dynamic(-1, seq(
      token.immediate("("),
      commaSep($.expression),
      optional(","),
      ")",
    )),

    member_access: $ => prec.left(
      PREC.member,
      seq(
        ".",
        $.identifier,
      ),
    ),

    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.placeholder_expression,
      $.implicit_member_expression,
      $.topic_reference,
      $.if_expression,
      $.do_expression,
      $.iterator_literal,
      $.lambda_expression,
      $.parenthesized_expression,
    ),

    do_expression: $ => seq(
      "do",
      $.block,
    ),

    typed_pattern: $ => prec.right(
      seq(
        $.pattern_base,
        ":",
        $.type_expression,
      ),
    ),

    pattern_base: $ => choice(
      $.identifier,
      "_",
      $.literal_pattern,
      $.struct_pattern,
      $.array_pattern,
      $.parenthesized_pattern,
    ),

    type_union: $ => choice(
      prec.left(seq($.type_arrow, repeat1(seq("|", $.type_arrow)))),
      $.type_arrow,
    ),

    type_arrow: $ => choice(
      prec.right(seq($.type_suffix, "->", $.type_arrow)),
      $.type_suffix,
    ),

    type_suffix: $ => prec.left(seq($.type_prefix, repeat($.type_prefix))),

    type_prefix: $ => choice(
      seq("?", $.type_prefix),
      seq("!", $.type_prefix),
      $.type_atom,
    ),

    type_atom: $ => choice(
      $.parenthesized_type,
      $.type_identifier,
      $.wildcard_type,
    ),

    type_identifier: $ => choice(
      $.qualified_identifier,
      "Self",
      "nil",
      "void",
    ),

    qualified_identifier: $ => prec.right(seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    )),

    implicit_member_expression: $ => seq(
      "#",
      field("member", $.identifier),
    ),

    identifier: _ => token(prec(-1, /[A-Za-z_][A-Za-z0-9_]*/)),

    number_literal: _ => token(choice(
      new RegExp(FLOAT_LITERAL_PATTERN),
      new RegExp(FLOAT_SUFFIX_ONLY_PATTERN),
      new RegExp(INTEGER_LITERAL_PATTERN),
    )),

    string_literal: _ => token(seq(
      '"',
      repeat(choice(/[^"\\\n]+/, /\\./)),
      '"',
    )),

    interpolated_string: $ => seq(
      "`",
      repeat(choice(
        $.interpolation_text,
        $.string_interpolation,
      )),
      "`",
    ),

    interpolation_text: _ => token(prec(1, new RegExp(`${INTERPOLATION_CHUNK_PATTERN}+`))),

    string_interpolation: $ => seq(
      token.immediate("${"),
      field("expression", $.expression),
      "}",
    ),
